fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,9 @@
 
 body {
   margin: 0;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 @layer base {
